# dchp

./: .gitignore  LICENSE  MANIFEST.in  README.md  efficiency.py  hdh_code.py  pv_util.py  pyproject.toml
data/2024_full/: AC_unitout_return_2024.csv  AHU_Aux_return_2024.csv  AHU_main_return_2024.csv  cooling_setpoint_return_2024.csv  heating_setpoint_return_2024.csv  main_left_2024.csv  main_right_2024.csv  solar_output_2024_full.csv  weather_2024_full.csv
data/2324/: AC_unitout_return.csv  AHU_Aux_return.csv  AHU_main_return.csv  DC_House_Nov_April.csv  heating_setpoint_return.csv  solar_output_2324.csv  weather_2324.csv
data/2425/: AHU_Aux_return.csv  AHU_main_return.csv  BDinverter_DC_current_OUT_return.csv  BDinverter_DC_power_OUT_return.csv  heating_setpoint_return.csv  solar_output_2425.csv  weather_2425.csv
dchp/: __init__.py  hdh_code.py
