[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dchp"
version = "0.1.0"
description = "Analysis tools for comparing AC and DC heat pump operation in residential solar nanogrids"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aaron Farha"}
]
keywords = ["heat pump", "solar", "nanogrid", "DC", "AC", "energy analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
sklearn = [
    "scikit-learn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dchp"
Repository = "https://github.com/yourusername/dchp"
Documentation = "https://github.com/yourusername/dchp#readme"

[tool.setuptools]
packages = ["dchp"]

[tool.setuptools.package-data]
dchp = ["data/**/*"]
